<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rgPizzaria"
        android:onClick="verificaTipoPizza">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbMussa"
            android:id="@+id/rbMussarela"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbCala"
            android:id="@+id/rbCalabresa"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPort"
            android:id="@+id/rbPortuguesa"
            android:checked="false" />

        <CheckBox
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/ckBorda"
            android:id="@+id/ckBorda"
            android:checked="false"
            android:onClick="verificaTipoPizza" />

        <Button
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCalcular"
            android:id="@+id/btnCalc"
            android:layout_gravity="center_horizontal"
            android:onClick="calculaValorPizza" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/txtResultado"
            android:layout_gravity="center_horizontal" />

    </RadioGroup>

</RelativeLayout>